# python-automation-template

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
tests/: test_example.py
